--- a/assets/templates/css/templatesStyle.css
+++ b/assets/templates/css/templatesStyle.css
@@ -21,6 +21,7 @@ header{
     padding: 20px, 40px, 20px, 348px;
     background-color: white;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .headline{
