--- a/css/add_task.css
+++ b/css/add_task.css
@@ -161,6 +161,7 @@ body {
 }
 
 .dateInput {
+    color: #D1D1D1;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
@@ -192,6 +193,70 @@ body {
     top: 120px;
 }
 
+.prioPickerButtonsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    gap: 16px;
+    width: 440px;
+    height: 56px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+.urgentButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 10px;
+    gap: 8px;
+    width: 136px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    flex: none;
+    order: 0;
+    flex-grow: 1;
+}
+
+.mediumButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 10px;
+    gap: 8px;
+    width: 136px;
+    height: 56px;
+    background: #FFA800;
+    border-radius: 10px;
+    flex: none;
+    order: 1;
+    flex-grow: 1;
+}
+
+.lowButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 10px;
+    gap: 8px;
+    width: 136px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    flex: none;
+    order: 2;
+    flex-grow: 1;
+}
+
 .categoryContainer {
     display: flex;
     flex-direction: column;
@@ -205,6 +270,23 @@ body {
     top: 232px;
 }
 
+.categoryPicker {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 16px;
+    width: 440px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
 .subtaskContainer {
     display: flex;
     flex-direction: column;
@@ -216,4 +298,96 @@ body {
     height: 80px;
     left: 0px;
     top: 336px;
+}
+
+.subtaskPicker {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 16px;
+    gap: 10px;
+    width: 440px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+    order: 1;
+    align-self: stretch;
+    flex-grow: 0;
+}
+
+.fieldRequiredText {
+    position: absolute;
+    width: 170px;
+    height: 27px;
+    left: 328px;
+    top: 926px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #FF8190;
+}
+
+.fieldRequiredText span {
+    color: black;
+    font-size: 16px;
+}
+
+.clearCreateButtonsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    gap: 16px;
+    position: absolute;
+    width: 309px;
+    height: 56px;
+    left: 995.25px;
+    top: 889px;
+}
+
+.clearButton {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    gap: 4px;
+    width: 110px;
+    height: 56px;
+    background: #F6F7F8;
+    border: 1px solid #2A3647;
+    border-radius: 10px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    color: #2A3647;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.createButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    gap: 4px;
+    width: 183px;
+    height: 56px;
+    background: #2A3647;
+    border-radius: 10px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 700;
 }
