--- a/css/contacts.css
+++ b/css/contacts.css
@@ -8,7 +8,7 @@ body {
     position: relative;
     top: 96px;
     left: 232px;
-    height: 89vh;
+    height: 89.8vh;
     width: 100%;
     right: 0px;
 }
@@ -23,6 +23,8 @@ body {
     border-top: solid 1px rgb(221, 221, 221);
     z-index: 1;
     box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.1);
+    padding-left: 35px;
+    padding-right: 35px;
 }
 
 
@@ -167,7 +169,7 @@ body {
     font-size: 20px;
 }
 
-.firstLetterFromContacts img {
+.vectorContacts {
     width: 302px;
 }
 
@@ -177,6 +179,13 @@ body {
     gap: 35px;
     padding: 15px;
     align-items: center;
+}
+
+.contactChamberLeftContainer:hover {
+    background-color: #2A3647;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .contactChamberLeftContainer img  {
