--- a/css/board.css
+++ b/css/board.css
@@ -8,7 +8,7 @@ body{
 .section-board{
     margin-left: 296px;
     margin-right: 64px;
-    margin-top: 96px;
+    margin-top: 192px;
 }
 
 
@@ -118,7 +118,6 @@ object-fit: cover;
 }
 
 .no-tasks-board{
-height: 48px;
 border: 1px solid #A8A8A8;
 border-radius: 10px;
 gap: 10px;
@@ -128,7 +127,8 @@ box-shadow: rgba(0, 0, 0, 0.16);
 display: flex;
 justify-content: center;
 align-items: center;
-width: 252px;
+width: 110px;
+height: 48px;
 }
 
 .tasks-board{
@@ -140,7 +140,16 @@ box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.8);
 display: flex;
 flex-direction: column;
 align-items: flex-start;
-width: 252px;
+width: auto;
+}
+
+.height-board{
+    height: 48px;
+}
+
+.align-center-board{
+    display: flex;
+    align-items: center;
 }
 
 .user-story-board{
@@ -156,6 +165,21 @@ font-size: 16px;
 display: flex;
 justify-content: center;
 align-items: center;
+}
+
+.technical-task-board{
+    background: #1FD7C1;
+    border-radius: 8px;
+    padding: 4px 16px 4px 16px;
+    gap: 10px;
+    color: white;
+    width: 113px;
+    height: 27px;
+    font-weight: 400;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .name-of-task-board{
@@ -180,7 +204,6 @@ color: #A8A8A8;
 }
 
 .progressbar-background{
-margin-top: 16px;
 width: 50%;
 height: 8px;
 background-color: #F4F4F4;
@@ -210,10 +233,45 @@ margin-top: 16px;
 width: 32px;
 height: 32px;
 border-radius: 32px;
-background-color: #FF7A00;
 display: flex;
 justify-content: center;
 align-items: center;
+}
+
+.background-color-orange{
+    background-color: #FF7A00;;
+}
+
+.background-color-pink{
+    background-color: #FC71FF;
+}
+
+.background-color-violet{
+    background-color: #6E52FF;
+}
+
+.background-color-violet2{
+    background-color: #9327FF;
+}
+
+.background-color-yellow{
+    background-color: #FFBB2B;
+}
+
+.background-color-red{
+    background-color: #FF4646;
+}
+
+.background-color-green{
+    background-color: #1FD7C1;
+}
+
+.background-color-darkblue{
+    background-color: #462F8A;
+}
+
+.background-color-lightblue{
+    background-color: #00BEE8;
 }
 
 .priority-icon-board{
