--- a/css/add_task.css
+++ b/css/add_task.css
@@ -48,6 +48,11 @@ body {
     top: 0px;
 }
 
+.flex-start {
+    display: flex;
+    justify-content: flex-start;
+}
+
 .titleInputAddTask {
     box-sizing: border-box;
     display: flex;
@@ -330,7 +335,11 @@ body {
     font-weight: 400;
     font-size: 20px;
     line-height: 120%;
+}
+
+.redText {
     color: #FF8190;
+    font-size: 20px;
 }
 
 .fieldRequiredText span {
