--- a/css/board.css
+++ b/css/board.css
@@ -236,6 +236,15 @@ border-radius: 32px;
 display: flex;
 justify-content: center;
 align-items: center;
+border: solid 1px white;
+}
+
+.margin-left-9px {
+    margin-left: -9px;
+}
+
+.colorWhite {
+    color: white;
 }
 
 .background-color-orange{
