edited privacy policy/ added Custom Scrollbar

--- a/assets/templates/css/templatesStyle.css
+++ b/assets/templates/css/templatesStyle.css
@@ -63,7 +63,7 @@ header{
 /* sideBar */
 
 .sidebar{
-    background-color: rgb(42, 54, 71);
+    background-color: #2a3647;
     width: 232px;
     height: 100vh;
     position: absolute;
