--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -1,11 +1,120 @@
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 4px;
+    background-color: #F6F7F8;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #D5D6D7;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #2A3647;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #597296;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #29ABE2;
+}
+
+
 body {
     margin: 0;
     font-family: "Inter", sans-serif;
+    background: #F6F7F8;
 }
 
 .privacyPolicyContentContainer {
     display: flex;
     height: 100vh;
     width: auto;
-    background: #F6F7F8;
+
+}
+
+.ppHeadlineContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    gap: 30px;
+    position: absolute;
+    width: 419px;
+    height: 73px;
+    left: 328px;
+    top: 206px;
+}
+
+.ppHeadline {
+    width: 419px;
+    height: 73px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 61px;
+    line-height: 120%;
+    color: #000000;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.backArrow {
+    position: absolute;
+    width: 37px;
+    height: 37px;
+    left: 1307px;
+    top: 225px;
+}
+
+.backArrow img {
+    width: 32px;
+    height: 32px;
+    top: 3px;
+    left: 2.5px;
+}
+
+.ppContent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 35px;
+    position: absolute;
+    width: 1016px;
+    height: 720px;
+    left: 328px;
+    top: 311px;
+    overflow: auto;
+}
+
+.ppContent h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 120%;
+    color: #000000;
+}
+
+.ppContent p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 120%;
+    color: #000000;
 }
