edited Privacy Policy html/css and Legal Notice html/css

--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -37,6 +37,11 @@ body {
     background: #F6F7F8;
 }
 
+a {
+    text-decoration: none;
+    color: #29abe2;
+}
+
 .privacyPolicyContentContainer {
     display: flex;
     height: 100vh;
