--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -1,20 +1,20 @@
 <nav class="sidebar column space-around">
-  <div class="center">
+  <a href="../../login.html" class="center">
     <img class="sidebar_logo" src="./assets/img/sidebar_logo.png" />
-  </div>
+  </a>
   <div class="column center menu">
-    <div class="sidebar_nav center">
+    <a href="../../summary.html" class="sidebar_nav center">
       <img src="./assets/img/summary_icon.png" /><span>Summary</span>
-    </div>
-    <div class="sidebar_nav center">
+    </a>
+    <a href="../../add_task.html" class="sidebar_nav center">
       <img src="./assets/img/addTask_icon.png" /><span>Add Task</span>
-    </div>
-    <div class="sidebar_nav center">
+    </a>
+    <a href="../../board.html" class="sidebar_nav center">
       <img src="./assets/img/board_icon.png" /><span>Board</span>
-    </div>
-    <div class="sidebar_nav center">
+    </a>
+    <a href="../../contacts.html" class="sidebar_nav center">
       <img src="./assets/img/contacts_icon.png" /><span>Contacts</span>
-    </div>
+    </a>
   </div>
   <div class="data">
     <div class="data_nav">Privacy Policy</div>
