--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,7 +1,7 @@
 <header>
   <span class="headline">Kanban Project Management Tool</span>
   <div class="center fixed-width-104">
-    <img class="help-icon" src="./assets/img/help-icon.png" />
+    <a href="../../help.html"><img class="help-icon" src="./assets/img/help-icon.png"></a>
     <div class="circle"><span>SM</span></div>
   </div>
 </header>
