--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -17,7 +17,11 @@
     </a>
   </div>
   <div class="data">
-    <div class="data_nav">Privacy Policy</div>
-    <div class="data_nav">Legal notice</div>
+    <div class="data_nav">
+      <a href="../../privacy_policy.html">Privacy Policy</a>
+    </div>
+    <div class="data_nav">
+      <a href="../../legal_notice.html">Legal Notice</a>
+    </div>
   </div>
 </nav>
