--- a/assets/templates/css/templatesStyle.css
+++ b/assets/templates/css/templatesStyle.css
@@ -66,7 +66,7 @@ header{
     background-color: #2a3647;
     width: 232px;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
