--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -2,6 +2,6 @@
   <span class="headline">Kanban Project Management Tool</span>
   <div class="center fixed-width-104">
     <a href="../../help.html"><img class="help-icon" src="./assets/img/help-icon.png"></a>
-    <div class="circle"><span>SM</span></div>
+    <div class="circle"><span id="initials"></span></div>
   </div>
 </header>
