--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -3,16 +3,16 @@
     <img class="sidebar_logo" src="./assets/img/sidebar_logo.png" />
   </a>
   <div class="column center menu">
-    <a href="../../summary.html" class="sidebar_nav center">
+    <a href="#" onclick="openSummary()" class="sidebar_nav center">
       <img src="./assets/img/summary_icon.png" /><span>Summary</span>
     </a>
-    <a href="../../add_task.html" class="sidebar_nav center">
+    <a href="#" onclick="openAddTask()" class="sidebar_nav center">
       <img src="./assets/img/addTask_icon.png" /><span>Add Task</span>
     </a>
-    <a href="../../board.html" class="sidebar_nav center">
+    <a href="#" onclick="openBoard()" class="sidebar_nav center">
       <img src="./assets/img/board_icon.png" /><span>Board</span>
     </a>
-    <a href="../../contacts.html" class="sidebar_nav center">
+    <a href="#" onclick="openContacts()" class="sidebar_nav center">
       <img src="./assets/img/contacts_icon.png" /><span>Contacts</span>
     </a>
   </div>
