--- a/css/signUp.css
+++ b/css/signUp.css
@@ -82,17 +82,37 @@ body {
     color: #000;
   }
 
-.signedUpSuccessfullyDiv {
+.overlay-signUp{
     position: fixed;
-    width: 312px;
-    top: 67px;
-    height: 74px;
-    right: 5%;
-    gap: 35px;
-    align-items: center;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100vw;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    overflow-y: hidden;
+    display: flex;
     justify-content: center;
-    visibility: hidden;
+    align-items: center;
+    z-index: 10;
 }
+
+.signedUpSuccessfullyDiv {
+    z-index: 20;
+    animation: slide ease-in 800ms;
+}
+
+@keyframes slide {
+    from {
+        transform: translateY(1000px);
+    }
+    to {
+        transform: translateY(0px);
+    }
+}
+
+
 
 
 .notAJoinUserText {
