--- a/css/contacts.css
+++ b/css/contacts.css
@@ -233,7 +233,7 @@ body {
 .container {
     position: fixed;
     display: none; 
-    z-index: 1;
+    z-index: 101;
     top: 0;
     left: 0;
     width: 100%;
@@ -442,7 +442,10 @@ body {
 
 
 
-
+.showEmailLi {
+    color: #007CEE;
+    font-size: 13px;;
+}
 
 #telefonliste h2 {
     display: flex;
@@ -507,7 +510,7 @@ body {
     font-size: 16px;
     justify-content: center;
     display: flex;
-    border-color: solid 1px white;
+    border: 2px solid white; 
 }
 
 .kontakt-info {
