edited legalNotice and privacyPolice
added the go back functionality to the blue back arrow on both Pages.
added the pointer hover effect on both css.

--- a/css/legal_notice.css
+++ b/css/legal_notice.css
@@ -92,6 +92,10 @@ a {
     left: 2.5px;
 }
 
+.backArrow img:hover {
+    cursor: pointer;
+}
+
 .legalNoticeContent {
     display: flex;
     flex-direction: column;
