--- a/css/add_task.css
+++ b/css/add_task.css
@@ -108,9 +108,14 @@ button {
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    border: none;
     flex: none;
     order: 0;
     flex-grow: 1;
+}
+
+.urgentButtonSelected {
+    background: #ff3d00;
 }
 
 .mediumButton {
@@ -122,11 +127,17 @@ button {
     gap: 8px;
     width: 136px;
     height: 56px;
-    background: #FFA800;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    border: none;
     flex: none;
     order: 1;
     flex-grow: 1;
+}
+
+.mediumButtonSelected {
+    background: #FFA800;
 }
 
 .lowButton {
@@ -141,9 +152,14 @@ button {
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    border: none;
     flex: none;
     order: 2;
     flex-grow: 1;
+}
+
+.lowButtonSelected {
+    background: #7ae229
 }
 
 .categoryPicker {
