--- a/css/contacts.css
+++ b/css/contacts.css
@@ -216,7 +216,7 @@ body {
     top: 18.5%;
     left: 105%;
     width: 500px !important; 
-    transition: all 1s ease; 
+    transition: width 0.25s ease-in-out, opacity 2.5s ease-in-out, left 1s ease-in-out;
     z-index: 100; 
     object-fit: cover;
   }
