--- a/css/contacts.css
+++ b/css/contacts.css
@@ -517,6 +517,22 @@ body {
     border: 2px solid white; 
 }
 
+.initialen-kreis-show-contacts {
+    width: 100px;
+    height: 100px;
+    line-height: 20px;
+    border-radius: 100%;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    margin-right: 10px;
+    font-size: 50px;
+    justify-content: center;
+    display: flex;
+    border: 4px solid white; 
+    align-items: center;
+}
+
 .kontakt-info {
     display: flex;
     flex-direction: column;
