--- a/css/add_task.css
+++ b/css/add_task.css
@@ -5,6 +5,10 @@ button {
     font-size: 60px;
 }
 
+.fontSize20px {
+    font-size: 20px;
+}
+
 .flex-start {
     display: flex;
     justify-content: flex-start;
@@ -23,9 +27,6 @@ button {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
 }
 
 .descriptionTextArea {
@@ -42,18 +43,11 @@ button {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
 }
 
 .assignContacts {
     cursor: pointer;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     gap: 8px;
     padding: 12px 16px;
     width: 440px;
@@ -62,8 +56,6 @@ button {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     flex: none;
-    order: 1;
-    flex-grow: 0;
 }
 
 .addTaskDividingBar {
@@ -79,10 +71,6 @@ button {
     cursor: pointer;
     color: #D1D1D1;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     padding: 12px 16px;
     gap: 10px;
     width: 440px;
@@ -91,9 +79,6 @@ button {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
 }
 
 .urgentButton {
@@ -110,8 +95,6 @@ button {
     border-radius: 10px;
     border: none;
     flex: none;
-    order: 0;
-    flex-grow: 1;
 }
 
 .urgentButtonSelected {
@@ -132,8 +115,6 @@ button {
     border-radius: 10px;
     border: none;
     flex: none;
-    order: 1;
-    flex-grow: 1;
 }
 
 .mediumButtonSelected {
@@ -154,8 +135,6 @@ button {
     border-radius: 10px;
     border: none;
     flex: none;
-    order: 2;
-    flex-grow: 1;
 }
 
 .lowButtonSelected {
@@ -163,21 +142,20 @@ button {
 }
 
 .categoryPicker {
-    cursor: pointer;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 16px;
     width: 440px;
     height: 48px;
-    background: #FFFFFF;
-    border: 1px solid #D1D1D1;
+    padding: 12px 16px;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    background-color: #FFFFFF;
+    background-image: url(../assets/img/arrow-drop-down.png);
+    background-position: 97%;
+    background-repeat: no-repeat;
+    border: 1px solid #ccc;
+    border-radius: 0;
     border-radius: 10px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+    border: 1px solid #d1d1d1;
+    position: relative;
 }
 
 .subtaskPicker {
@@ -194,9 +172,6 @@ button {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
 }
 
 .fieldRequiredText {
@@ -236,8 +211,6 @@ button {
     border: 1px solid #2A3647;
     border-radius: 10px;
     flex: none;
-    order: 0;
-    flex-grow: 0;
     color: #2A3647;
     font-size: 20px;
     font-weight: 400;
@@ -255,8 +228,6 @@ button {
     background: #2A3647;
     border-radius: 10px;
     flex: none;
-    order: 1;
-    flex-grow: 0;
     color: #FFFFFF;
     font-size: 20px;
     font-weight: 700;
