--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,6 +1,7 @@
 button {
     cursor: pointer;
 }
+
 .headlineAddTask {
     font-size: 60px;
 }
@@ -55,6 +56,12 @@ button {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     flex: none;
+    background-image: url(../assets/img/arrow-drop-down.png);
+    background-position: 97%;
+    background-repeat: no-repeat;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none;
 }
 
 .addTaskDividingBar {
@@ -149,6 +156,7 @@ button {
     padding: 12px 16px;
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
+    appearance: none;
     background-color: #FFFFFF;
     background-image: url(../assets/img/arrow-drop-down.png);
     background-position: 97%;
