--- a/css/contacts.css
+++ b/css/contacts.css
@@ -239,11 +239,13 @@ body {
 #showContactDetailsOnSlide {
     position: fixed;
     top: 18.5%;
-    left: 105%;
-    transition: width 15000s ease-in-out, opacity 500s ease-in-out, left 1s ease-in-out;
-    z-index: 100; 
+    left: 120%; /* Startposition außerhalb des Bildschirms */
+    transition: width 2s ease-in-out, opacity 1s ease-in-out, left 0.5s ease-in-out; /* Angepasste und einheitliche Transition-Zeiten */
+    z-index: 100;
     object-fit: cover;
-  }
+}
+
+
   
   #zielbereich {
     position: relative;
