--- a/css/board.css
+++ b/css/board.css
@@ -295,7 +295,7 @@ display: none;
 /* Anzeige in Groß */
 
 .section-board-overlay{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
