--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -2,6 +2,12 @@
   <span class="headline">Kanban Project Management Tool</span>
   <div class="center fixed-width-104">
     <a href="../../help.html"><img class="help-icon" src="./assets/img/help-icon.png"></a>
-    <div class="circle"><span id="initials"></span></div>
+    <div onclick="showMenuBar()" class="circle"><span id="initials"></span></div>
   </div>
 </header>
+
+<div id="help-menu-bar" class="help-click d-none">
+  <a href="./legal_notice.html" class="help-link">Legal Notice</a>
+  <a href="./privacy_policy.html" class="help-link">Privacy Policy</a>
+  <a href="./Login.html" class="help-link">Log out</a>
+</div>
