--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,3 +1,37 @@
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 4px;
+    background-color: #F6F7F8;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #D5D6D7;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #2A3647;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #597296;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #29ABE2;
+}
+
+
+
 button {
     cursor: pointer;
 }
@@ -241,4 +275,123 @@ button {
     color: #FFFFFF;
     font-size: 20px;
     font-weight: 700;
+}
+
+
+
+.input-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    width: 440px;
+    height: 80px;
+    left: 0px;
+    top: 336px;
+}
+
+.subtask-input {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 21px;
+    gap: 10px;
+    width: 440px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+    padding-right: 110px;
+}
+
+.add-subtasks-btn {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+}
+
+.subtask-actions {
+    cursor: pointer;
+}
+
+.vertical-line-sub {
+    height: 24px;
+    width: 1px;
+    background-color: #a8a8a8;
+    margin: 0 6px;
+}
+.todo-subtask::before {
+    content: '•';
+    position: absolute;
+    top: calc(50% - 11px);
+} 
+.todo-subtask {
+    align-items: center;
+    padding: 6px 20px;
+    min-height: 32px;
+    position: relative;
+    width: 400px;
+    border-radius: 10px;
+}
+
+.todo-subtask-container {
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+.subtask-imgs {
+    visibility: hidden;
+    justify-content: flex-end;
+    gap: 8px;
+    cursor: pointer;
+}
+
+.subtask-actions:hover {
+    scale: 105%;
+}
+
+.subtask-edit {
+    background-color: #eeeeee;
+    border: none;
+    font-size: 16px;
+    height: 100%;
+}
+
+.set-edit .subtask-imgs {
+    visibility: visible;
+}
+
+.todo-subtask:hover .subtask-imgs {
+	visibility: visible;
+}
+
+li p {
+	margin-left: 16px;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.align-c {
+    align-items: center;
+}
+
+.d-none {
+    display: none;
+}
+
+.todo-subtask:hover {
+	background-color: #eeeeee;
+}
+
+#subtask-container {
+    padding-inline-start: 0px;
+    min-height: 135px;
+    overflow: auto;
 }
