--- a/css/board.css
+++ b/css/board.css
@@ -102,7 +102,8 @@ gap: 26px;
 .fields{
 display: flex;
 flex-direction: column;
-height: auto;
+height: 100%;
+min-width: 100px;
 gap: 16px;
 }
 
@@ -141,6 +142,7 @@ display: flex;
 flex-direction: column;
 align-items: flex-start;
 width: auto;
+cursor: pointer;
 }
 
 .height-board{
@@ -506,4 +508,8 @@ background-color: #D1D1D1;
     to {
         transform: translateX(0px);
     }
+}
+
+.drag-area-highlight{
+    background-color: rgba(0, 0, 0, 0.2);
 }
