--- a/css/contacts.css
+++ b/css/contacts.css
@@ -16,7 +16,6 @@ body {
 
 .leftContainer {
     display: flex;
-    width: 456px;
     gap: 0px;
     opacity: 0px;
     justify-content: center;
@@ -784,7 +783,17 @@ li {
     align-items: center;
 }
 
+.phoneListAndButton {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
 
+.centerVectorPhoneBook {
+    display: flex;
+    width: 100%;
+    position: relative;
+}
 
 
 
@@ -796,4 +805,9 @@ li {
     .showAllContacts {
         height: 93%;
     }
+}
+
+
+@media (max-width: 600px) {
+
 }
