--- a/assets/templates/css/templatesStyle.css
+++ b/assets/templates/css/templatesStyle.css
@@ -24,6 +24,10 @@ header{
     z-index: 1;
 }
 
+.JoinLogoHeaderImg {
+    display: none;
+}
+
 .headline{
     font-weight: 400;
     font-size: 20px;
