--- a/css/board.css
+++ b/css/board.css
@@ -29,7 +29,7 @@ body{
     align-items: center;
 }
 
-.input-container {
+.input-container-board {
     position: relative;
     display: inline-block;
 }
@@ -651,6 +651,10 @@ flex: none;
 padding-right: 110px;
 }
 
+.position-relative-board{
+    position: relative;
+}
+
 .add-subtasks-btn-edit{
     position: absolute;
 right: 12px;
@@ -710,32 +714,43 @@ width: 300px;
 
 /* addTask-Container */
 
-.addTaskContentContainer {
+.overlay-add-task-board{
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 20;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     display: flex;
-    height: 100vh;
-    width: auto;
-    background: #F6F7F8;
+    justify-content: center;
+    align-items: center;
 }
 
-.headlineAddTaskContainer {
+.addTaskContentContainerBoard {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 1px;
-    position: absolute;
-    width: 278px;
-    height: 73px;
-    left: 328px;
-    top: 206px;
+    padding: 16px;
+    height: 75%;
+    width: 80%;
+    background: #F6F7F8;
+    z-index: 99;
+    position: relative;
+}
+
+.headlineAddTaskContainerBoard {
+    font-size: 30px;
+    margin-bottom: 10px;
 }
 
 .leftAddTaskContainer {
     position: absolute;
-    width: 440px;
-    height: 376px;
-    left: 328px;
-    top: 327px;
+    left: 20px;
+    top: 100px;
+    width: 50%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .titleContainer {
@@ -744,11 +759,32 @@ width: 300px;
     align-items: flex-start;
     padding: 0px;
     gap: 8px;
-    position: absolute;
+    
+}
+
+.flex-start-board {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.redText {
+    color: #FF8190;
+    font-size: 20px;
+}
+
+.titleInputAddTask {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 21px;
+    gap: 10px;
     width: 440px;
-    height: 96px;
-    left: 0px;
-    top: 0px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
 }
 
 .descriptionContainer {
@@ -764,6 +800,21 @@ width: 300px;
     top: 112px;
 }
 
+.descriptionTextArea {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 18px 16px;
+    gap: 10px;
+    width: 440px;
+    height: 120px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+}
+
 .assignContactsContainer {
     display: flex;
     flex-direction: column;
@@ -777,12 +828,32 @@ width: 300px;
     top: 296px;
 }
 
+.assignContacts-select{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    gap: 10px;
+    width: 300px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+    background-image: url(../assets/img/arrow-drop-down.png);
+    background-position: 97%;
+    background-repeat: no-repeat;
+    -webkit-appearance: none !important;
+    font-size: 20px;
+}
+
 .rightAddTaskContainer {
     position: absolute;
-    width: 440px;
-    height: 416px;
-    left: 864.25px;
-    top: 327px;
+    width: 50%;
+    height: 70%;
+    top: 100px;
+    right: 20px;
 }
 
 .taskDateContainer {
@@ -796,6 +867,138 @@ width: 300px;
     height: 96px;
     left: 0px;
     top: 0px;
+}
+
+.dateInput {
+    cursor: pointer;
+    color: #D1D1D1;
+    box-sizing: border-box;
+    padding: 12px 16px;
+    gap: 10px;
+    width: 440px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+    font-size: 20px;
+}
+
+.urgentButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 10px;
+    gap: 8px;
+    width: 136px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: none;
+    flex: none;
+}
+
+.urgentButtonSelected {
+    background: #ff3d00;
+    color: #FFFFFF;
+}
+
+.mediumButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 10px;
+    gap: 8px;
+    width: 136px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: none;
+    flex: none;
+}
+
+.mediumButtonSelected {
+    background: #FFA800;
+    color: #FFFFFF;
+}
+
+.lowButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 10px;
+    gap: 8px;
+    width: 136px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: none;
+    flex: none;
+}
+
+.lowButtonSelected {
+    background: #7ae229;
+    color: #FFFFFF;
+}
+
+.categoryPicker {
+    width: 440px;
+    height: 48px;
+    padding: 12px 16px;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none;
+    background-color: #FFFFFF;
+    background-image: url(../assets/img/arrow-drop-down.png);
+    background-position: 97%;
+    background-repeat: no-repeat;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    border-radius: 10px;
+    border: 1px solid #d1d1d1;
+    position: relative;
+}
+
+.input-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    width: 440px;
+    height: 80px;
+    left: 0px;
+    top: 336px;
+}
+
+.add-subtasks-btn {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+}
+
+.subtask-actions {
+    cursor: pointer;
+}
+
+.vertical-line-sub {
+    height: 24px;
+    width: 1px;
+    background-color: #a8a8a8;
+    margin: 0 6px;
+}
+
+.subtask-container-board {
+    padding-inline-start: 0px;
+    min-height: 135px;
+    overflow: auto;
 }
 
 .prioPickerContainer {
@@ -863,4 +1066,53 @@ width: 300px;
     height: 56px;
     left: 995.25px;
     top: 889px;
+}
+
+.fieldRequiredText {
+    position: absolute;
+    width: 170px;
+    height: 27px;
+    left: 20px;
+    bottom: 50px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+}
+
+.clearButton {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    gap: 4px;
+    width: 110px;
+    height: 56px;
+    background: #F6F7F8;
+    border: 1px solid #2A3647;
+    border-radius: 10px;
+    flex: none;
+    color: #2A3647;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.createButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    gap: 4px;
+    width: 183px;
+    height: 56px;
+    background: #2A3647;
+    border-radius: 10px;
+    flex: none;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 700;
 }
